# eight-eyes

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/plugin/: marketplace.json
.github/workflows/: test.yml
adapters/codex_cli/: AGENTS.md  hooks.json
adapters/codex_cli/agents/: collab-accessibility.toml  collab-docs.toml  collab-implementer.toml  collab-performance.toml  collab-security.toml  collab-skeptic.toml  collab-test-writer.toml  collab-verifier.toml
adapters/copilot_cli/: hooks.json  plugin.json
adapters/copilot_cli/agents/: collab-accessibility.agent.md  collab-docs.agent.md  collab-implementer.agent.md  collab-performance.agent.md  collab-security.agent.md  collab-skeptic.agent.md  collab-test-writer.agent.md  collab-verifier.agent.md
agents/: collab-accessibility.md  collab-docs.md  collab-implementer.md  collab-performance.md  collab-security.md  collab-skeptic.md  collab-test-writer.md  collab-verifier.md
commands/: 8eyes-copilot.md  8eyes.md
docs/: MIGRATION.md
hooks/: hooks.json
hooks/scripts/: collab_common.py  collab_post_tool.py  collab_pre_compact.py  collab_pre_tool.py  collab_session_start.py  collab_stop.py  collab_subagent_start.py  collab_subagent_stop.py
hooks/scripts/core/: __init__.py  circuit_breaker.py  contracts.py  (+5 more)
scripts/: collabctl.py
skills/collab/: SKILL.md
spec/: enforcement.yaml  enforcement_compiled.json
spec/roles/: builtin_roles.yaml  roles.schema.json  roles_compiled.json
tests/: test_collab_hooks.py
(+17 files in other folders)
