[project]
name = "eight-eyes"
version = "4.2.0"
description = "Hook-enforced multi-agent code review for Claude Code, Copilot CLI, and Codex CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "AgentBuildersApp"}]
keywords = ["code-review", "multi-agent", "claude-code", "copilot-cli", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/AgentBuildersApp/eight-eyes"
Repository = "https://github.com/AgentBuildersApp/eight-eyes"

